--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,7 @@
   font-display: swap;
 }
 
+/*Color*/
 /*Reset*/
 * {
   padding: 0;
@@ -304,6 +305,7 @@ button:focus {
 
 body {
   font: 400 18px 'Noto Sans', sans-serif;
+  color: #000;
   background: #ffffff;
   letter-spacing: -0.24px;
 }
@@ -346,26 +348,33 @@ a:hover {
   text-decoration: none;
 }
 
-/*Color*/
 /*Container*/
 .container {
-  width: 1140px;
+  width: 1150px;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1280px) {
   .container {
-    width: 944px;
+    width: 992px;
+    padding: 0 10px;
   }
 }
 
 @media screen and (max-width: 991px) {
   .container {
-    width: 750px;
+    width: 767px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 25px 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
   .container {
     width: 100%;
     padding: 0 15px;
@@ -373,17 +382,227 @@ a:hover {
 }
 
 /*Block*/
+.button_transparent_green {
+  border: 1.5px solid #55d1ad;
+  color: #55d1ad;
+  border-radius: 5px;
+  transition: 300ms;
+  cursor: pointer;
+}
+
+.button_transparent_green a {
+  transition: 0ms;
+  position: relative;
+}
+
+.button_transparent_green a:before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0px;
+  bottom: 2px;
+  background: transparent;
+  transition: 300ms;
+}
+
+.button_transparent_green:hover {
+  background: #32b38c;
+  border: 1.5px solid #32b38c;
+  color: #fff;
+}
+
+.button_transparent_green:hover a:before {
+  background: #fff;
+}
+
+/*Header-wrap*/
+.header-wrap {
+  position: relative;
+  z-index: 110;
+  background: url(../images/main_bg.jpg) 50%/cover no-repeat;
+  height: 400px;
+  position: relative;
+}
+
+.header-wrap:before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  background: rgba(65, 65, 65, 0.6);
+  -webkit-backdrop-filter: blur(3.5px);
+  backdrop-filter: blur(3.5px);
+  z-index: 1;
+}
+
 /*Header*/
 .header {
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 10;
-  padding: 10px 0;
-  background: #ffffff;
+  padding: 32px 0;
+  color: #fff;
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    padding: 20px 0;
+  }
+}
+
+.header__menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header__logo {
+  display: flex;
+  align-items: center;
+}
+
+.header__logo img {
+  margin-right: 10px;
+}
+
+.header__logo span {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 33px;
+}
+
+.header__name-mobi {
+  display: none;
+}
+
+.header__block {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.035em;
+}
+
+@media screen and (max-width: 991px) {
+  .header__block {
+    font-size: 11px;
+  }
+}
+
+.header__list {
+  display: flex;
+  align-items: center;
+  margin-right: 84px;
+}
+
+@media screen and (max-width: 1280px) {
+  .header__list {
+    margin-right: 40px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .header__list {
+    margin-right: 20px;
+  }
+}
+
+.header__link {
+  margin-right: 40px;
+}
+
+.header__link a {
+  border-bottom: 1px solid transparent;
+}
+
+.header__link a:hover {
+  color: #32b28c;
+  border-bottom: 1px solid #32b28c;
+}
+
+.header__link:last-child {
+  margin: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .header__link {
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .header__link {
+    margin-right: 10px;
+  }
+}
+
+.header__user {
+  display: flex;
+  align-items: center;
+}
+
+.header__entrance {
+  margin-right: 35px;
+}
+
+.header__entrance a {
+  border-bottom: 1px solid transparent;
+}
+
+.header__entrance a:hover {
+  color: #32b28c;
+  border-bottom: 1px solid #32b28c;
+}
+
+@media screen and (max-width: 1280px) {
+  .header__entrance {
+    margin-right: 10px;
+  }
+}
+
+.header__registration {
+  border: 1.5px solid #55d1ad;
+  color: #55d1ad;
+  padding: 12px 15px;
+  border-radius: 5px;
+  transition: 300ms;
+  cursor: pointer;
+}
+
+.header__registration:hover {
+  background: #32b38c;
+  border: 1.5px solid #32b38c;
+  color: #fff;
+}
+
+.header__registration:hover a:before {
+  background: #fff;
+}
+
+@media screen and (max-width: 991px) {
+  .header__registration {
+    padding: 4px 6px;
+  }
+}
+
+.header__navigation {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .header__navigation {
+    display: block;
+  }
 }
 
 .header__burger {
@@ -418,12 +637,6 @@ a:hover {
 
 .header__burger span::after {
   top: -9px;
-}
-
-@media screen and (max-width: 767px) {
-  .header__burger {
-    display: flex;
-  }
 }
 
 .header__mobile {
