--- a/scss/style.scss
+++ b/scss/style.scss
@@ -249,6 +249,14 @@
   font-display: swap;
 }
 
+//! Color
+/*Color*/
+
+$green: #55d1ad;
+$green1: #32b28c;
+$white: #fff;
+$black: #000;
+
 //! Reset
 /*Reset*/
 
@@ -365,34 +373,35 @@ a {
   }
 }
 
-//! Color
-/*Color*/
-
-$black: #000000;
-$green: #55d1ad;
-$white: #fff;
-
 //! Container
 /*Container*/
 
 .container {
-  width: 1140px;
+  width: 1150px;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1280px) {
   .container {
-    width: 944px;
+    width: 992px;
+    padding: 0 10px;
   }
 }
 
 @media screen and (max-width: 991px) {
   .container {
-    width: 750px;
+    width: 767px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 25px 0;
+  }
+}
+
+@media screen and (max-width: 480px) {
   .container {
     width: 100%;
     padding: 0 15px;
@@ -401,51 +410,212 @@ $white: #fff;
 
 //! Block
 /*Block*/
+.button_transparent_green {
+  border: 1.5px solid $green;
+  color: $green;
+  border-radius: 5px;
+  transition: 300ms;
+  cursor: pointer;
+  a {
+    transition: 0ms;
+    position: relative;
+    &:before {
+      content: '';
+      display: inline-block;
+      width: 100%;
+      height: 1px;
+      position: absolute;
+      left: 0px;
+      bottom: 2px;
+      background: transparent;
+      transition: 300ms;
+    }
+  }
 
+  &:hover {
+    background: #32b38c;
+    border: 1.5px solid #32b38c;
+    color: $white;
+    a {
+      &:before {
+        background: $white;
+      }
+    }
+  }
+}
+
+//! Header-wrap
+/*Header-wrap*/
+.header-wrap {
+  position: relative;
+  z-index: 110;
+
+  background: url(../images/main_bg.jpg) 50% / cover no-repeat;
+
+  height: 400px;
+  position: relative;
+  &:before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: rgba(65, 65, 65, 0.6);
+    backdrop-filter: blur(3.5px);
+    z-index: 1;
+  }
+}
 //! Header
 /*Header*/
 
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 10;
-  padding: 10px 0;
-  background: #ffffff;
+  padding: 32px 0;
+  color: $white;
+
+  @media screen and (max-width: 1280px) {
+    padding: 20px 0;
+  }
 
   &__inner {
   }
 
   &__menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   &__logo {
+    display: flex;
+    align-items: center;
+    img {
+      margin-right: 10px;
+    }
+
+    span {
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 33px;
+    }
+  }
+
+  &__name-pc {
+  }
+
+  &__name-mobi {
+    display: none;
   }
 
   &__block {
+    display: flex;
+    align-items: center;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    letter-spacing: 0.035em;
+
+    @media screen and (max-width: 991px) {
+      font-size: 11px;
+    }
   }
 
   &__nav {
   }
 
   &__list {
+    display: flex;
+    align-items: center;
+    margin-right: 84px;
+
+    @media screen and (max-width: 1280px) {
+      margin-right: 40px;
+    }
+
+    @media screen and (max-width: 991px) {
+      margin-right: 20px;
+    }
   }
 
   &__link {
+    margin-right: 40px;
+    a {
+      border-bottom: 1px solid transparent;
+      &:hover {
+        color: $green1;
+        border-bottom: 1px solid $green1;
+      }
+    }
+
+    &:last-child {
+      margin: 0;
+    }
+
+    @media screen and (max-width: 1280px) {
+      margin-right: 20px;
+    }
+
+    @media screen and (max-width: 991px) {
+      margin-right: 10px;
+    }
   }
 
   &__user {
+    display: flex;
+    align-items: center;
   }
 
   &__entrance {
+    margin-right: 35px;
+    a {
+      border-bottom: 1px solid transparent;
+      &:hover {
+        color: $green1;
+        border-bottom: 1px solid $green1;
+      }
+    }
+    @media screen and (max-width: 1280px) {
+      margin-right: 10px;
+    }
   }
 
   &__registration {
+    border: 1.5px solid $green;
+    color: $green;
+    padding: 12px 15px;
+    border-radius: 5px;
+    transition: 300ms;
+    cursor: pointer;
+
+    &:hover {
+      background: #32b38c;
+      border: 1.5px solid #32b38c;
+      color: $white;
+      a {
+        &:before {
+          background: $white;
+        }
+      }
+    }
+
+    @media screen and (max-width: 991px) {
+      padding: 4px 6px;
+    }
   }
 
   &__navigation {
+    display: none;
+    @media screen and (max-width: 767px) {
+      display: block;
+    }
   }
 
   &__burger {
@@ -483,9 +653,9 @@ $white: #fff;
       }
     }
 
-    @media screen and (max-width: 767px) {
-      display: flex;
-    }
+    //@media screen and (max-width: 767px) {
+    //  display: flex;
+    //}
   }
 
   &__mobile {
