--- a/css/style.css
+++ b/css/style.css
@@ -370,7 +370,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
-    padding: 25px 0;
+    padding: 0 40px;
   }
 }
 
@@ -382,39 +382,36 @@ a:hover {
 }
 
 /*Block*/
-.button_transparent_green {
-  border: 1.5px solid #55d1ad;
-  color: #55d1ad;
-  border-radius: 5px;
-  transition: 300ms;
-  cursor: pointer;
-}
-
-.button_transparent_green a {
-  transition: 0ms;
-  position: relative;
-}
-
-.button_transparent_green a:before {
-  content: '';
-  display: inline-block;
-  width: 100%;
-  height: 1px;
-  position: absolute;
-  left: 0px;
-  bottom: 2px;
-  background: transparent;
-  transition: 300ms;
-}
-
-.button_transparent_green:hover {
-  background: #32b38c;
-  border: 1.5px solid #32b38c;
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0.035em;
+  text-transform: uppercase;
   color: #fff;
 }
 
-.button_transparent_green:hover a:before {
-  background: #fff;
+.btn:hover {
+  transform: translateY(-2px);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+}
+
+.btn-green {
+  background: linear-gradient(99.09deg, #55d1ad 28.38%, #32b28c 82.94%);
+  box-shadow: 0px 0px 40px rgba(108, 154, 173, 0.4);
+  border-radius: 100px;
+}
+
+.btn-blue {
+  background: linear-gradient(99.09deg, #5c80dd 28.38%, #4466bc 82.94%);
+  box-shadow: 0px 0px 40px rgba(108, 154, 173, 0.4);
+  border-radius: 100px;
 }
 
 /*Header-wrap*/
@@ -422,7 +419,6 @@ a:hover {
   position: relative;
   z-index: 110;
   background: url(../images/main_bg.jpg) 50%/cover no-repeat;
-  height: 400px;
   position: relative;
 }
 
@@ -446,7 +442,6 @@ a:hover {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
   z-index: 10;
   padding: 32px 0;
   color: #fff;
@@ -455,6 +450,20 @@ a:hover {
 @media screen and (max-width: 1280px) {
   .header {
     padding: 20px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    padding: 34px 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 }
 
@@ -479,8 +488,22 @@ a:hover {
   line-height: 33px;
 }
 
+@media screen and (max-width: 768px) {
+  .header__name-pc {
+    display: none;
+  }
+}
+
 .header__name-mobi {
   display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .header__name-mobi {
+    display: block;
+    font-weight: 700;
+    font-size: 26px;
+  }
 }
 
 .header__block {
@@ -496,6 +519,12 @@ a:hover {
 @media screen and (max-width: 991px) {
   .header__block {
     font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__block {
+    display: none;
   }
 }
 
@@ -517,17 +546,40 @@ a:hover {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .header__list {
+    margin-right: 0;
+    background: #383c4a;
+    padding-top: 76px;
+  }
+}
+
 .header__link {
   margin-right: 40px;
 }
 
 .header__link a {
-  border-bottom: 1px solid transparent;
+  position: relative;
 }
 
-.header__link a:hover {
+.header__link a:before {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  left: 0px;
+  bottom: 1px;
+  background: transparent;
+  transition: 300ms;
+}
+
+.header__link:hover {
   color: #32b28c;
-  border-bottom: 1px solid #32b28c;
+}
+
+.header__link:hover a:before {
+  background: #32b28c;
 }
 
 .header__link:last-child {
@@ -551,6 +603,25 @@ a:hover {
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .header__user {
+    flex-direction: column;
+    margin-top: 31px;
+    letter-spacing: 0.035em;
+    position: relative;
+  }
+  .header__user:before {
+    content: '';
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    left: 20px;
+    top: 0px;
+    background: url(../images/header_user.svg);
+  }
+}
+
 .header__entrance {
   margin-right: 35px;
 }
@@ -570,6 +641,49 @@ a:hover {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .header__entrance {
+    border: 1px solid #32b38c;
+    border-radius: 3px;
+    width: 167px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 0 46px;
+    text-transform: uppercase;
+  }
+  .header__entrance a {
+    font-weight: 400;
+    font-size: 18px;
+    color: #32b28c;
+    transition: 0ms;
+    position: relative;
+  }
+  .header__entrance a:before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    left: 0px;
+    bottom: 1px;
+    background: #32b28c;
+    transition: 300ms;
+  }
+  .header__entrance:hover {
+    background: #32b38c;
+    border: 1.5px solid #32b38c;
+    color: #fff;
+  }
+  .header__entrance:hover a {
+    color: #fff;
+  }
+  .header__entrance:hover a:before {
+    background: #fff;
+  }
+}
+
 .header__registration {
   border: 1.5px solid #55d1ad;
   color: #55d1ad;
@@ -580,9 +694,13 @@ a:hover {
 }
 
 .header__registration:hover {
-  background: #32b38c;
-  border: 1.5px solid #32b38c;
+  background: #32b28c;
+  border: 1.5px solid #32b28c;
   color: #fff;
+}
+
+.header__registration:hover a {
+  transition: 0ms;
 }
 
 .header__registration:hover a:before {
@@ -592,6 +710,40 @@ a:hover {
 @media screen and (max-width: 991px) {
   .header__registration {
     padding: 4px 6px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header__registration {
+    width: 167px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+  }
+  .header__registration a {
+    transition: 0ms;
+    position: relative;
+  }
+  .header__registration a:before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    left: 0px;
+    bottom: 1px;
+    background: #32b28c;
+    transition: 300ms;
+  }
+  .header__registration:hover {
+    background: #32b28c;
+    border: 1.5px solid #32b28c;
+    color: #fff;
+  }
+  .header__registration:hover a:before {
+    background: #fff;
   }
 }
 
@@ -615,18 +767,18 @@ a:hover {
 
 .header__burger span {
   display: block;
-  width: 30px;
+  width: 29px;
   height: 3px;
-  border-radius: 5px;
+  background: #32b28c;
   position: relative;
 }
 
 .header__burger span:before, .header__burger span::after {
   content: '';
   display: inline-block;
-  width: 30px;
+  width: 29px;
   height: 3px;
-  border-radius: 5px;
+  background: #32b28c;
   position: absolute;
   left: 0px;
 }
@@ -637,6 +789,28 @@ a:hover {
 
 .header__burger span::after {
   top: -9px;
+}
+
+.header__burger.active span {
+  height: 0;
+}
+
+.header__burger.active span:before {
+  top: 0px;
+  transform: rotate(45deg);
+  background: #fff;
+}
+
+.header__burger.active span::after {
+  transform: rotate(-45deg);
+  background: #fff;
+  top: 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .header__burger {
+    display: flex;
+  }
 }
 
 .header__mobile {
@@ -650,9 +824,8 @@ a:hover {
     top: 0;
     right: 0;
     bottom: 0;
-    background: #c5bfbf;
+    background: #272a33;
     min-height: 100vh;
-    padding-top: 90px;
     width: 66%;
     transition: 300ms;
     z-index: 2;
@@ -664,11 +837,112 @@ a:hover {
   }
 }
 
+@media screen and (max-width: 480px) {
+  .header__mobile {
+    width: 100%;
+  }
+}
+
 .header__mobile .header__list {
   display: flex;
   flex-direction: column;
+  align-items: start;
+}
+
+.header__mobile .header__list:before {
+  content: '';
+  display: inline-block;
+  width: 33px;
+  height: 30px;
+  position: absolute;
+  top: 76px;
+  transition: 300ms;
+  left: 20px;
+  background: url(../images/header_logo-mobi.svg) 100% no-repeat;
 }
 
 .header__mobile .header__link {
-  margin: 0 0 30px;
+  margin: 0 0 26px;
+  padding-left: 70px;
+  position: relative;
+  letter-spacing: 0.07em;
+}
+
+.main {
+  position: relative;
+  z-index: 2;
+}
+
+.main__inner {
+  position: relative;
+  padding-top: 130px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main__item {
+  position: relative;
+}
+
+.main__images {
+  display: flex;
+  align-items: flex-start;
+}
+
+@media screen and (max-width: 1280px) {
+  .main__images {
+    width: 230px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main__images {
+    width: 180px;
+  }
+}
+
+.main__button {
+  width: 269px;
+  height: 66px;
+  position: absolute;
+  left: 50px;
+  top: 54%;
+}
+
+@media screen and (max-width: 1280px) {
+  .main__button {
+    width: 200px;
+    height: 50px;
+    left: 30px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main__button {
+    width: 180px;
+    height: 40px;
+    left: 20px;
+    font-size: 16px;
+  }
+}
+
+.main__logo {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 1280px) {
+  .main__logo {
+    width: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main__logo {
+    width: 60px;
+  }
 }
