--- a/scss/style.scss
+++ b/scss/style.scss
@@ -397,7 +397,7 @@ a {
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
-    padding: 25px 0;
+    padding: 0 40px;
   }
 }
 
@@ -410,38 +410,37 @@ a {
 
 //! Block
 /*Block*/
-.button_transparent_green {
-  border: 1.5px solid $green;
-  color: $green;
-  border-radius: 5px;
-  transition: 300ms;
-  cursor: pointer;
-  a {
-    transition: 0ms;
-    position: relative;
-    &:before {
-      content: '';
-      display: inline-block;
-      width: 100%;
-      height: 1px;
-      position: absolute;
-      left: 0px;
-      bottom: 2px;
-      background: transparent;
-      transition: 300ms;
-    }
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0.035em;
+  text-transform: uppercase;
+  color: $white;
+
+  &:hover{
+    transform: translateY(-2px);
   }
 
-  &:hover {
-    background: #32b38c;
-    border: 1.5px solid #32b38c;
-    color: $white;
-    a {
-      &:before {
-        background: $white;
-      }
-    }
+  &:active{
+    transform: translateY(-1px);
   }
+}
+
+.btn-green {
+  background: linear-gradient(99.09deg, #55d1ad 28.38%, #32b28c 82.94%);
+  box-shadow: 0px 0px 40px rgba(108, 154, 173, 0.4);
+  border-radius: 100px;
+}
+
+.btn-blue {
+  background: linear-gradient(99.09deg, #5c80dd 28.38%, #4466bc 82.94%);
+  box-shadow: 0px 0px 40px rgba(108, 154, 173, 0.4);
+  border-radius: 100px;
 }
 
 //! Header-wrap
@@ -451,8 +450,6 @@ a {
   z-index: 110;
 
   background: url(../images/main_bg.jpg) 50% / cover no-repeat;
-
-  height: 400px;
   position: relative;
   &:before {
     content: '';
@@ -475,7 +472,7 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  //bottom: 0;
   z-index: 10;
   padding: 32px 0;
   color: $white;
@@ -484,7 +481,16 @@ a {
     padding: 20px 0;
   }
 
+  @media screen and (max-width: 768px) {
+    padding: 34px 0;
+  }
+
   &__inner {
+    @media screen and (max-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 
   &__menu {
@@ -508,10 +514,18 @@ a {
   }
 
   &__name-pc {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
 
   &__name-mobi {
     display: none;
+    @media screen and (max-width: 768px) {
+      display: block;
+      font-weight: 700;
+      font-size: 26px;
+    }
   }
 
   &__block {
@@ -525,6 +539,10 @@ a {
 
     @media screen and (max-width: 991px) {
       font-size: 11px;
+    }
+
+    @media screen and (max-width: 768px) {
+      display: none;
     }
   }
 
@@ -543,15 +561,37 @@ a {
     @media screen and (max-width: 991px) {
       margin-right: 20px;
     }
+
+    @media screen and (max-width: 768px) {
+      margin-right: 0;
+      background: #383c4a;
+      padding-top: 76px;
+    }
   }
 
   &__link {
     margin-right: 40px;
     a {
-      border-bottom: 1px solid transparent;
-      &:hover {
-        color: $green1;
-        border-bottom: 1px solid $green1;
+      position: relative;
+      &:before {
+        content: '';
+        display: inline-block;
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        left: 0px;
+        bottom: 1px;
+        background: transparent;
+        transition: 300ms;
+      }
+    }
+
+    &:hover {
+      color: $green1;
+      a {
+        &:before {
+          background: $green1;
+        }
       }
     }
 
@@ -571,6 +611,23 @@ a {
   &__user {
     display: flex;
     align-items: center;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      margin-top: 31px;
+      letter-spacing: 0.035em;
+      position: relative;
+      &:before {
+        content: '';
+        display: inline-block;
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 20px;
+        top: 0px;
+        background: url(../images/header_user.svg);
+      }
+    }
   }
 
   &__entrance {
@@ -582,8 +639,52 @@ a {
         border-bottom: 1px solid $green1;
       }
     }
+
     @media screen and (max-width: 1280px) {
       margin-right: 10px;
+    }
+
+    @media screen and (max-width: 768px) {
+      border: 1px solid #32b38c;
+      border-radius: 3px;
+      width: 167px;
+      height: 42px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0 0 46px;
+      text-transform: uppercase;
+
+      a {
+        font-weight: 400;
+        font-size: 18px;
+        color: $green1;
+        transition: 0ms;
+        position: relative;
+        &:before {
+          content: '';
+          display: inline-block;
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0px;
+          bottom: 1px;
+          background: $green1;
+          transition: 300ms;
+        }
+      }
+
+      &:hover {
+        background: #32b38c;
+        border: 1.5px solid #32b38c;
+        color: $white;
+        a {
+          color: $white;
+          &:before {
+            background: $white;
+          }
+        }
+      }
     }
   }
 
@@ -596,10 +697,11 @@ a {
     cursor: pointer;
 
     &:hover {
-      background: #32b38c;
-      border: 1.5px solid #32b38c;
+      background: $green1;
+      border: 1.5px solid $green1;
       color: $white;
       a {
+        transition: 0ms;
         &:before {
           background: $white;
         }
@@ -608,6 +710,41 @@ a {
 
     @media screen and (max-width: 991px) {
       padding: 4px 6px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 167px;
+      height: 42px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-transform: uppercase;
+      a {
+        transition: 0ms;
+        position: relative;
+        &:before {
+          content: '';
+          display: inline-block;
+          width: 100%;
+          height: 1px;
+          position: absolute;
+          left: 0px;
+          bottom: 1px;
+          background: $green1;
+          transition: 300ms;
+        }
+      }
+
+      &:hover {
+        background: $green1;
+        border: 1.5px solid $green1;
+        color: $white;
+        a {
+          &:before {
+            background: $white;
+          }
+        }
+      }
     }
   }
 
@@ -627,20 +764,18 @@ a {
 
     span {
       display: block;
-      width: 30px;
+      width: 29px;
       height: 3px;
-      //background: $pink;
-      border-radius: 5px;
+      background: $green1;
       position: relative;
 
       &:before,
       &::after {
         content: '';
         display: inline-block;
-        width: 30px;
+        width: 29px;
         height: 3px;
-        //background: $pink;
-        border-radius: 5px;
+        background: $green1;
         position: absolute;
         left: 0px;
       }
@@ -653,9 +788,25 @@ a {
       }
     }
 
-    //@media screen and (max-width: 767px) {
-    //  display: flex;
-    //}
+    &.active {
+      span {
+        height: 0;
+        &:before {
+          top: 0px;
+          transform: rotate(45deg);
+          background: $white;
+        }
+        &::after {
+          transform: rotate(-45deg);
+          background: $white;
+          top: 0px;
+        }
+      }
+    }
+
+    @media screen and (max-width: 767px) {
+      display: flex;
+    }
   }
 
   &__mobile {
@@ -666,10 +817,10 @@ a {
       top: 0;
       right: 0;
       bottom: 0;
-      background: rgb(197, 191, 191);
+      background: #272a33;
       min-height: 100vh;
-      padding-top: 90px;
       width: 66%;
+
       transition: 300ms;
       z-index: 2;
 
@@ -680,13 +831,100 @@ a {
       }
     }
 
+    @media screen and (max-width: 480px) {
+      width: 100%;
+    }
+
     .header__list {
       display: flex;
       flex-direction: column;
+      align-items: start;
+      &:before {
+        content: '';
+        display: inline-block;
+        width: 33px;
+        height: 30px;
+        position: absolute;
+        top: 76px;
+        transition: 300ms;
+        left: 20px;
+        background: url(../images/header_logo-mobi.svg) 100% no-repeat;
+      }
     }
 
     .header__link {
-      margin: 0 0 30px;
+      margin: 0 0 26px;
+      padding-left: 70px;
+      position: relative;
+      letter-spacing: 0.07em;
+    }
+  }
+}
+
+//! Main
+
+.main {
+  position: relative;
+  z-index: 2;
+  &__inner {
+    position: relative;
+    padding-top: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__item {
+    position: relative;
+  }
+
+  &__images {
+    display: flex;
+    align-items: flex-start;
+
+    @media screen and (max-width: 1280px) {
+      width: 230px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 180px;
+    }
+  }
+
+  &__button {
+    width: 269px;
+    height: 66px;
+    position: absolute;
+    left: 50px;
+    top: 54%;
+
+    @media screen and (max-width: 1280px) {
+      width: 200px;
+      height: 50px;
+      left: 30px;
+      font-size: 16px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 180px;
+      height: 40px;
+      left: 20px;
+      font-size: 16px;
+    }
+  }
+
+  &__logo {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+
+    @media screen and (max-width: 1280px) {
+      width: 80px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 60px;
     }
   }
 }
