--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,39 @@ a:hover {
 }
 
 /*Block*/
+.bg {
+  background: url(../images/search_fon.png) 100%/cover no-repeat;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 49px;
+  letter-spacing: 0.035em;
+}
+
+@media screen and (max-width: 991px) {
+  h2 {
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 35px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  h2 {
+    font-size: 24px;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 33px;
+  }
+}
+
 .btn {
   display: flex;
   justify-content: center;
@@ -868,6 +901,7 @@ a:hover {
   letter-spacing: 0.07em;
 }
 
+/*Main*/
 .main {
   position: relative;
   z-index: 2;
@@ -881,13 +915,44 @@ a:hover {
   align-items: center;
 }
 
+@media screen and (max-width: 480px) {
+  .main__inner {
+    flex-direction: column;
+  }
+}
+
 .main__item {
   position: relative;
+}
+
+@media screen and (max-width: 480px) {
+  .main__item {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .main__images {
   display: flex;
   align-items: flex-start;
+}
+
+.main__images .mobi {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .main__images .mobi {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main__images .pc {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 1280px) {
@@ -910,6 +975,22 @@ a:hover {
   top: 54%;
 }
 
+.main__button .mobi {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .main__button .mobi {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main__button .pc {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 1280px) {
   .main__button {
     width: 200px;
@@ -923,8 +1004,23 @@ a:hover {
   .main__button {
     width: 180px;
     height: 40px;
-    left: 20px;
+    left: 0px;
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .main__button {
+    width: 239px;
+    height: 52px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    letter-spacing: 0.035em;
+    top: 65%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
 
@@ -945,4 +1041,133 @@ a:hover {
   .main__logo {
     width: 60px;
   }
+}
+
+@media screen and (max-width: 480px) {
+  .main__logo {
+    display: none;
+  }
+}
+
+.bg-1 {
+  top: 450px;
+}
+
+@media screen and (max-width: 991px) {
+  .bg-1 {
+    top: 300px;
+  }
+}
+
+/*Main-pc*/
+.main-pc {
+  position: relative;
+}
+
+.main-pc .search__inner {
+  display: flex;
+  align-items: center;
+  padding-top: 60px;
+}
+
+@media screen and (max-width: 768px) {
+  .main-pc .search__inner {
+    padding: 40px 0;
+  }
+}
+
+.main-pc .search__title {
+  color: #4466bc;
+  margin-bottom: 33px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-pc .search__title {
+    margin-bottom: 20px;
+  }
+}
+
+.main-pc .search__text {
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.035em;
+}
+
+.main-pc .search__text p:first-child {
+  margin-bottom: 33px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-pc .search__text {
+    font-size: 18px;
+  }
+  .main-pc .search__text p:first-child {
+    margin-bottom: 10px;
+  }
+}
+
+.main-pc .search__images {
+  display: flex;
+  align-self: start;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .main-pc .search__images {
+    width: 400px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .main-pc .search__images {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-pc .search__images {
+    display: none;
+  }
+}
+
+/*Solutions*/
+.solutions__inner {
+  padding-top: 160px;
+}
+
+.solutions__title {
+  color: #32b38c;
+  margin-bottom: 125px;
+  text-align: center;
+}
+
+.solutions__items {
+  display: grid;
+  grid-gap: 55px;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.solutions__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.solutions__image {
+  display: flex;
+  align-items: start;
+  height: 200px;
+}
+
+.solutions__text {
+  text-align: center;
+  letter-spacing: 0.035em;
+  font-weight: 500;
+  background: #ffffff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  padding: 11px;
+}
+
+.solutions__text span {
+  display: block;
 }
